# mini-pagila-api

./: .gitignore  README.md
docs/: rubric_mapping_onepager.html  rubric_mapping_onepager.md
pagila_api/: .env.example  .gitignore  README.md  alembic.ini  pre-commit-config.yaml  pyproject.toml  sitecustomize.py
pagila_api/api/v1/: ai_routes.py  film_routes.py  rental_routes.py
pagila_api/app/: main.py
pagila_api/app/agents/: llm_agent.py  orchestration.py  search_agent.py
pagila_api/core/: ai_kernel.py  auth.py  config.py  db.py  logging.py
pagila_api/core/prompts/summary/: config.json  prompt.skprompt
pagila_api/domain/: models.py  repositories.py  services.py
pagila_api/migrations/: env.py  script.py.mako
pagila_api/migrations/versions/: 0001_add_streaming_available.py  0002_create_streaming_subscription.py
pagila_api/tests/: conftest.py  test_ai.py  test_films.py  test_rentals.py
pagila_sql/: pagila-data.sql  pagila-schema.sql
